# rc2_analysis

./: .gitignore  README.md  README.txt  lick_event_mod.m  load_all_data.m  path_config.m  setup_paths.m  setuppaths.m
python/: .env.example  README.md  pyproject.toml
python/notebooks/: boundary_venn_exploration.py  cv_strategy_exploration.py  parity_report.py
python/rc2_formatted_data_reader/: reader.py
python/rc2_glm/: pyproject.toml
python/scripts/: boundary_venn_face_me.py  collinearity_vif.py  collinearity_vif_full2.py  collinearity_vif_full_20ms.py  collinearity_vif_goggles.py  collinearity_vif_me.py  compare_5bases_vs_10bases.py  compare_face_me_vs_current.py  compare_tuning_curve_pearson.py  depth_x_time_by_subset.py  deviance_explained_pooled.py  fr_me_correlation_lohuis_style.py  generate_regression_baseline.py  honest_framing_summary.py  plot_accel_summary.py  plot_acid_vs_selection.py  plot_component_buildup_pooled.py  plot_component_buildup_vt.py  plot_deviance_scatter.py  plot_fr_me_reconciliation.py  plot_full_per_cluster.py  plot_me_across_by_condition.py  plot_me_split_extra.py  plot_me_std_by_condition.py  plot_model_progression.py  plot_onset_vs_trajectory.py  plot_population_contributions.py  plot_psth_speed_diagnostic.py  plot_selection_me.py  plot_speed_profiles_reference.py  plot_split_by_condition_transitions.py  plot_trial_level_pearson.py  plot_two_models_per_cluster_goggles.py  render_cluster_kernels.py  render_tuning_winners_losers.py  rerender_kernels_with_observed_tuning.py  run_ablation_history_onset.py  run_face_me_onset_no_history.py  run_glm_current_ME_hist_accel_10ms.py  run_glm_current_ME_hist_accel_20ms.py  (+16 more)
python/tests/: conftest.py  test_compare_tuning_curves.py  test_cv_bps_formula.py  test_forward_selection_multiseed.py  test_glm_basis.py  test_glm_cross_validation.py  test_glm_design_matrix.py  test_glm_fitting.py  test_glm_plots.py  test_glm_prefilter.py  test_history_basis.py  test_motion_energy.py  test_pipeline_regression.py  test_reader.py  (+4 more)
(+430 files in other folders)
