[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rc2_formatted_data_reader"
version = "0.1.0"
description = "Lazy reader for rc2_analysis MATLAB v7.3 formatted data files"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.0",
    "numpy>=1.20",
]

[project.optional-dependencies]
stimulus = ["scipy>=1.7"]
test = ["pytest>=7", "scipy>=1.7"]

[tool.setuptools.packages.find]
where = ["."]
include = ["rc2_formatted_data_reader*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
