[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rc2_python"
version = "0.1.0"
description = "Python side of rc2_analysis: formatted-data reader + GLM replication"
requires-python = ">=3.10"
dependencies = [
    "h5py>=3.0",
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "scikit-learn>=1.0",
    "nemos>=0.2.7",
    "jax",
    "jaxlib",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[project.scripts]
rc2-glm = "rc2_glm.pipeline:main"

[tool.setuptools.packages.find]
where = ["src"]
include = ["rc2_formatted_data_reader*", "rc2_glm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
