[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "rc2_glm"
version = "0.1.0"
description = "Python replication of MATLAB Poisson GLM (Hierarchical Forward Selection) for rc2_analysis"
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "pandas>=1.3",
    "h5py>=3.0",
    "scikit-learn>=1.0",
    "nemos>=0.2.7",
    "jax",
    "jaxlib",
    "rc2_formatted_data_reader",
]

[project.optional-dependencies]
test = ["pytest>=7"]

[tool.setuptools.packages.find]
where = ["src"]
include = ["rc2_glm*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
